--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512x512.png">
 
-
-    <!-- Leaflet CSS -->
+    <!-- Leaflet CSS: Es CRUCIAL que esto esté ANTES de tu CSS personalizado si anulas estilos de Leaflet,
+         y ANTES de que se ejecute el JS de Leaflet. -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -30,7 +30,9 @@
 </head>
 <body>
     <div id="app-container">
-        <div id="map"></div>
+        <!-- El mapa necesita una altura definida vía CSS para mostrarse -->
+        <div id="map"></div> 
+        
         <div id="controls-panel">
             <div id="time-difference-display">--:--</div>
 
@@ -83,22 +85,22 @@
             <h4 id="modal-title">Añadir Parada</h4>
             <input type="hidden" id="stop-lat-input">
             <input type="hidden" id="stop-lng-input">
-            <input type="hidden" id="stop-index-input"> <!-- Para edición -->
+            <input type="hidden" id="stop-index-input">
             <label for="arrival-time-input">Hora de Llegada Programada:</label>
             <input type="time" id="arrival-time-input" required>
             <label for="departure-time-input">Hora de Salida Programada:</label>
             <input type="time" id="departure-time-input" required>
             <button id="save-stop-btn" class="success">Guardar Parada</button>
-            <button id="cancel-stop-btn" class="secondary">Cancelar</button> <!-- onclick removido, se asignará en JS -->
+            <button id="cancel-stop-btn" class="secondary">Cancelar</button>
         </div>
     </div>
 
-    <!-- Leaflet JS -->
+    <!-- Leaflet JS: Debe cargarse ANTES de tu app.js si app.js usa L -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
     
-    <!-- Custom JS -->
+    <!-- Custom JS: Al final del body para asegurar que el DOM está cargado -->
     <script src="js/app.js"></script>
 </body>
 </html>
