--- a/index.html
+++ b/index.html
@@ -4,119 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Move Pro</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-          integrity="sha200-ZcdApe3+MLantagesFXwZaIGRqueldySzOk+CzzSGE9GB+Cg=="
-          crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#303F9F">
+    <meta name="theme-color" content="#3f51b5"/>
 </head>
 <body>
-
-    <div class="container">
-        <h1>Smart Move Pro (Chofer)</h1>
-
-        <div id="map" class="map"></div>
-
-        <div class="controls-panel">
-
-            <h2>Gestión de Rutas</h2>
-            <div class="form-section">
-                <h3>Crear/Editar Ruta</h3>
-                <div id="route-creation-controls">
-                    <input type="text" id="route-name" placeholder="Nombre de la Ruta">
-                    <button id="set-start-point-btn">1. Set Inicio</button>
-                    <button id="set-end-point-btn" disabled>2. Set Fin</button>
-                    <button id="add-intermediate-point-btn" disabled>+ Parada Intermedia</button>
-                    <button id="clear-map-btn">Limpiar Mapa</button>
-                    <div id="start-end-details" style="margin-top: 10px;">
-                        <div id="start-point-info" style="display: none;">
-                            Inicio: <span id="start-point-coords"></span>
-                            Nombre: <input type="text" id="start-point-name" placeholder="Nombre Inicio">
-                            Hora Salida: <input type="time" id="start-point-time">
-                        </div>
-                         <div id="end-point-info" style="display: none;">
-                            Fin: <span id="end-point-coords"></span>
-                            Nombre: <input type="text" id="end-point-name" placeholder="Nombre Fin">
-                            Hora Llegada: <input type="time" id="end-point-time">
-                        </div>
-                    </div>
-                     <div id="intermediate-stop-placeholder" style="margin-top: 10px; display: none;">
-                         Nueva Parada Intermedia: <span id="new-intermediate-coords"></span>
-                         Nombre: <input type="text" id="new-intermediate-name" placeholder="Nombre opcional">
-                         Hora Llegada: <input type="time" id="new-intermediate-time">
-                         <button id="add-new-intermediate-btn">Añadir Parada</button>
-                    </div>
-                    <div style="margin-top: 10px;">
-                         <input type="checkbox" id="auto-calculate-times">
-                         <label for="auto-calculate-times">Calcular horarios intermedios automáticamente</label>
-                    </div>
-                </div>
-
-                <h3>Lista de Paradas</h3>
-                <ul id="stop-list">
-                    <!-- Stop list will be populated here -->
-                </ul>
-
-                <button id="save-route-btn">Guardar Ruta</button>
+    <header>
+        <h1>Smart Move Pro</h1>
+    </header>
+    <div id="map"></div>
+    <div class="controls-panel">
+        <div class="control-group">
+            <h3>Definición de Ruta</h3>
+            <div>
+                <label for="startLat">Latitud Inicio:</label>
+                <input type="number" id="startLat" step="any" placeholder="Ej: -34.6037">
+                <label for="startLng">Longitud Inicio:</label>
+                <input type="number" id="startLng" step="any" placeholder="Ej: -58.3816">
+                <label for="startName">Nombre Inicio (Ej: Terminal):</label>
+                <input type="text" id="startName" value="Inicio">
+                <label for="startTime">Hora Salida Programada Inicio:</label>
+                <input type="time" id="startTime">
             </div>
-
-            <div class="form-section">
-                <h3>Cargar/Eliminar Ruta</h3>
-                <select id="saved-routes-dropdown">
-                    <option value="">-- Seleccionar Ruta --</option>
-                    <!-- Saved routes will be populated here -->
-                </select>
-                <button id="load-route-btn" disabled>Cargar</button>
-                <button id="delete-route-btn" disabled>Eliminar</button>
+            <div>
+                <label for="endLat">Latitud Fin:</label>
+                <input type="number" id="endLat" step="any" placeholder="Ej: -34.5889">
+                <label for="endLng">Longitud Fin:</label>
+                <input type="number" id="endLng" step="any" placeholder="Ej: -58.4000">
+                <label for="endName">Nombre Fin (Ej: Plaza):</label>
+                <input type="text" id="endName" value="Fin">
+                <label for="endTime">Hora Llegada Programada Fin:</label>
+                <input type="time" id="endTime">
             </div>
-
-            <div class="form-section">
-                 <h3>Cola de Seguimiento</h3>
-                 <button id="add-to-queue-btn" disabled>Añadir Ruta Seleccionada a Cola</button>
-                 <ul id="tracking-queue-list">
-                     <!-- Tracking queue will be populated here -->
-                 </ul>
-                 <button id="clear-queue-btn">Limpiar Cola</button>
+            <p>Toca el mapa para añadir paradas intermedias (después de definir Inicio/Fin).</p>
+            <div>
+                <input type="checkbox" id="autoCalcTimes" checked>
+                <label for="autoCalcTimes">Calcular horarios intermedios automáticamente</label>
             </div>
+            <div id="intermediateStopManualTime" style="display:none;">
+                <label for="intermediateTime">Hora Llegada/Paso Parada Intermedia:</label>
+                <input type="time" id="intermediateTime">
+            </div>
+        </div>
 
-            <div class="form-section">
-                <h2>Seguimiento en Tiempo Real</h2>
-                <button id="start-tracking-btn" disabled>Iniciar Seguimiento</button>
-                <button id="stop-tracking-btn" disabled>Detener Seguimiento</button>
+        <div class="control-group">
+            <h3>Paradas de la Ruta Actual</h3>
+            <ul id="stopsList"></ul>
+        </div>
 
-                <div id="tracking-info" style="margin-top: 15px; display: none;">
-                    <p>Ruta Activa: <strong id="tracking-route-name">-</strong></p>
-                    <p>Próxima Parada: <strong id="next-stop-info">-</strong></p>
-                    <p>Diferencia de Tiempo: <strong id="time-difference" style="font-size: 1.2em;">+/-00:00</strong></p>
-                    <p>Ubicación Actual: <span id="current-location">-</span></p>
-                </div>
+        <div class="control-group">
+            <h3>Gestión de Rutas</h3>
+            <label for="routeName">Nombre de Ruta:</label>
+            <input type="text" id="routeName" placeholder="Ej: Linea 101 - Ramal A">
+            <button id="saveRouteBtn">Guardar Ruta</button>
+            <hr>
+            <label for="loadRouteSelect">Cargar Ruta:</label>
+            <select id="loadRouteSelect"></select>
+            <button id="loadRouteBtn">Cargar Seleccionada</button>
+            <button id="deleteRouteBtn" class="danger">Eliminar Seleccionada</button>
+        </div>
 
-                 <div style="margin-top: 10px;">
-                     <input type="checkbox" id="manual-control">
-                     <label for="manual-control">Control Manual Parada/Ruta</label>
-                 </div>
-                 <div id="manual-control-buttons" style="display: none;">
-                      <button id="prev-stop-btn" disabled>< Parada Anterior</button>
-                      <button id="next-stop-btn" disabled>Parada Siguiente ></button>
-                 </div>
+        <div class="control-group">
+            <h3>Cola de Seguimiento</h3>
+            <button id="addToQueueBtn">Añadir Ruta Cargada a Cola</button>
+            <ul id="trackingQueueDisplay"></ul>
+            <button id="clearQueueBtn" class="danger">Limpiar Cola</button>
+        </div>
+        
+        <div class="control-group">
+            <h3>Seguimiento en Tiempo Real</h3>
+            <button id="startTrackingBtn" class="secondary">Iniciar Seguimiento</button>
+            <button id="stopTrackingBtn" class="danger" disabled>Detener Seguimiento</button>
+            <div>
+                <input type="checkbox" id="manualControlCheckbox">
+                <label for="manualControlCheckbox">Control Manual Parada/Ruta</label>
+            </div>
+            <div class="manual-controls">
+                <button id="prevStopBtn" disabled>Parada Anterior</button>
+                <button id="nextStopBtn" disabled>Parada Siguiente</button>
+            </div>
+            <div class="info-display">
+                <p>Próxima Parada: <span id="nextStopInfo">---</span></p>
+                <p>Diferencia Horario: <span id="timeDiffInfo">---</span></p>
+                <p>Estado GPS: <span id="gpsStatus">Inactivo</span></p>
             </div>
         </div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-            integrity="sha200-aj8yIGifwzWzQARxQyS4LL+kRTWDR50CAuCSzRqFgDY/XqS9wsHkNyK5erw4CZZW"
-            crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/app.js"></script>
-    <script>
-        // Register service worker
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('sw.js')
-                    .then(reg => console.log('Service Worker Registered:', reg))
-                    .catch(err => console.error('Service Worker Registration Failed:', err));
-            });
-        }
-    </script>
 </body>
 </html>
